--- a/Nosotros.css
+++ b/Nosotros.css
@@ -1,3 +1,10 @@
 body{
-    background-color: rgb(240, 253, 240);
+    background-color: rgb(255, 255, 255);
+    font-size: 3em;
+    text-align: center;
 }
+img{
+    height: 11em;
+    width: 8em;
+}
+/*mejorar diseños*/
