--- a/Contacto.css
+++ b/Contacto.css
@@ -1,4 +1,19 @@
+main{
+    text-align: center;
+    color: #EC4F22;
+}
 body{
     background-color: rgb(255, 255, 255)
 }
-/*centrar*/
+form{
+    font-size: 1.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.button{
+    height: 2em;
+    width: 5em;
+    display: flex;
+    justify-content: center;
+}
